riyadh expo petal types

--- a/NodeFlowStaticCalcs-MultiNodes-Types.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "76992ff4-decc-4eea-9200-81a0f11ad1c2",
    "metadata": {},
    "outputs": [],
@@ -14,23 +14,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "28822aed-75a1-4e66-8756-0f5572243b14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Group1\n",
-    "path1 = {'node1':90,'node2':30,'node3':60,'node4':60,'node5':40,'node6':20,'node7':60,'node8':20,\n",
-    "         'node9':90,'node10':30,'node11':60,'node12':60,'node13':40,'node14':20,'node15':60,'end':999}\n",
+    "petalType = {\n",
+    "    \"Type 1\":{\n",
+    "        \"Usable Space\":1,\n",
+    "        \"Service Time high\":300,\n",
+    "        \"Service Time low\":180,\n",
+    "    },\n",
+    "    \"Type 4\":{\n",
+    "        \"Usable Space\":0.5,\n",
+    "        \"Service Time high\":75,\n",
+    "        \"Service Time low\":30,\n",
+    "    },\n",
+    "    \"Type 5.6\":{\n",
+    "        \"Usable Space\":0.5,\n",
+    "        \"Service Time high\":90,\n",
+    "        \"Service Time low\":45,\n",
+    "    },\n",
+    "    \"Type 7.8\":{\n",
+    "        \"Usable Space\":0.75,\n",
+    "        \"Service Time high\":120,\n",
+    "        \"Service Time low\":60,\n",
+    "    },\n",
+    "}\n",
     "\n",
-    "path2 = {'node9':90,'node10':30,'node11':60,'node12':60,'node13':40,'node14':20,'node15':60,'end':999}\n",
     "\n",
-    "#Group2\n",
-    "path3 = {'node16':90,'node17':30,'node18':60,'node19':60,'node20':40,'node21':20,'node22':60,'node23':20,\n",
-    "         'node24':90,'node25':30,'node26':60,'node27':60,'node28':40,'node29':20,'node30':60,\n",
-    "         'end':999}\n",
+    "path1 = {'node1':'Type 1',\n",
+    "'node2':'Type 5.6',\n",
+    "'node3':'Type 7.8',\n",
+    "'node4':'Type 5.6',\n",
+    "'node5':'Type 7.8',\n",
+    "'node6':'Type 4',\n",
+    "'node7':'Type 5.6',\n",
+    "'node8':'Type 5.6',\n",
+    "'node9':'Type 4',\n",
+    "'node10':'Type 5.6',\n",
+    "'node11':'Type 4',\n",
+    "'node12':'Type 7.8',\n",
+    "'node13':'Type 5.6',\n",
+    "'node14':'Type 5.6',\n",
+    "'node15':'Type 4',\n",
+    "'node16':'Type 7.8',\n",
+    "}\n",
     "\n",
-    "path4 = {'node24':90,'node25':30,'node26':60,'node27':60,'node28':40,'node29':20,'node30':60,'end':999}\n",
+    "path2 = {'node17':'Type 1',\n",
+    "'node18':'Type 7.8',\n",
+    "'node19':'Type 5.6',\n",
+    "'node20':'Type 4',\n",
+    "'node21':'Type 5.6',\n",
+    "'node22':'Type 7.8',\n",
+    "'node23':'Type 4',\n",
+    "'node24':'Type 7.8',\n",
+    "'node25':'Type 4',\n",
+    "'node26':'Type 4',\n",
+    "'node27':'Type 4',\n",
+    "'node28':'Type 7.8',\n",
+    "'node29':'Type 7.8',\n",
+    "'node30':'Type 5.6',\n",
+    "'node31':'Type 4',\n",
+    "'node32':'Type 4',\n",
+    "}\n",
+    "\n",
+    "\n",
+    "path3 = {'node33':'Type 1',\n",
+    "'node34':'Type 4',\n",
+    "'node35':'Type 4',\n",
+    "'node36':'Type 5.6',\n",
+    "'node37':'Type 7.8',\n",
+    "'node38':'Type 5.6',\n",
+    "'node39':'Type 4',\n",
+    "'node40':'Type 4',\n",
+    "'node41':'Type 7.8',\n",
+    "'node42':'Type 4',\n",
+    "'node43':'Type 4',\n",
+    "'node44':'Type 4',\n",
+    "'node45':'Type 4',\n",
+    "'node46':'Type 4',\n",
+    "'node47':'Type 5.6',\n",
+    "'node48':'Type 4',\n",
+    "}\n",
+    "\n",
+    "path4 = {'node8':'Type 5.6',\n",
+    "'node9':'Type 4',\n",
+    "'node10':'Type 5.6',\n",
+    "'node11':'Type 4',\n",
+    "'node12':'Type 7.8',\n",
+    "'node13':'Type 5.6',\n",
+    "'node14':'Type 5.6',\n",
+    "'node15':'Type 4',\n",
+    "'node16':'Type 7.8',}\n",
+    "path5 = {'node24':'Type 7.8',\n",
+    "'node25':'Type 4',\n",
+    "'node26':'Type 4',\n",
+    "'node27':'Type 4',\n",
+    "'node28':'Type 7.8',\n",
+    "'node29':'Type 7.8',\n",
+    "'node30':'Type 5.6',\n",
+    "'node31':'Type 4',\n",
+    "'node32':'Type 4',}\n",
+    "path6 = {'node40':'Type 4',\n",
+    "'node41':'Type 7.8',\n",
+    "'node42':'Type 4',\n",
+    "'node43':'Type 4',\n",
+    "'node44':'Type 4',\n",
+    "'node45':'Type 4',\n",
+    "'node46':'Type 4',\n",
+    "'node47':'Type 5.6',\n",
+    "'node48':'Type 4',}\n",
+    "\n",
+    "# path4 = {'node24':90,'node25':30,'node26':60,'node27':60,'node28':40,'node29':20,'node30':60,'end':999}\n",
     "\n",
     "\n",
     "# #Fast Track\n",
@@ -40,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "21109858-7e01-41c8-9cd5-59478d211e37",
    "metadata": {},
    "outputs": [],
@@ -48,24 +144,40 @@
     "nodePaths = {'path1':path1,\n",
     "               'path2':path2,\n",
     "               'path3':path3,\n",
-    "               'path4':path4,\n",
+    "                'path4':path4,\n",
+    "                'path5':path5,\n",
+    "                'path6':path6,\n",
+    "            #    'path4':path4,\n",
     "              } #nodename : service tieme in seconds\n",
+    "nodeRoundTime = {\n",
+    "    \"path1\": 180, #High\n",
+    "    \"path2\": 180, #High\n",
+    "    \"path3\": 180, #High\n",
+    "    \"path4\": 180, #Low\n",
+    "    \"path5\": 180,  #Low\n",
+    "    \"path6\": 180, #Low\n",
+    "}\n",
+    "pathLiftCapacity = {\n",
+    "    'path1': 81, #High\n",
+    "    'path2': 81, #High\n",
+    "    'path3': 81, #High\n",
+    "    'path4': 9, #Low\n",
+    "    'path5': 9,  #Low\n",
+    "    'path6': 9, #Low\n",
+    "}\n",
     "nodeDwellRange = 10 #seconds eg. 40 second dwell time with 10 second range, people can stay between 30-50 seconds\n",
     "\n",
     "liftRoundTime = 45 #seconds\n",
-    "liftCapacity = 12 #people\n",
+    "liftCapacity = 90 #people\n",
     "liftCapacityArrivalRate = {\n",
-    "    0:0.8,\n",
+    "    0:1,\n",
     "    3600:1\n",
-    "}\n",
-    "\n",
-    "simulationTime = 7200 #seconds\n",
-    "\n"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "ba85d505",
    "metadata": {},
    "outputs": [],
@@ -76,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "id": "9ce7018a-74a3-46cd-a25f-612162751d2e",
    "metadata": {},
    "outputs": [],
@@ -95,8 +207,9 @@
     "        return f\"{self.idx} {self.curNode} {self.timeAtCurNode} {self.timeAtNextNode}\"\n",
     "\n",
     "    def calculateTimeToNextNode(self):\n",
-    "        lowRange = self.node_detail[self.curNode]-nodeDwellRange\n",
-    "        highRange = self.node_detail[self.curNode] + nodeDwellRange\n",
+    "        # print(self.node_detail)\n",
+    "        lowRange = petalType[self.node_detail[self.curNode]]['Service Time low']\n",
+    "        highRange = petalType[self.node_detail[self.curNode]]['Service Time high']\n",
     "        timeToSpendAtCurNode = rd.randrange(lowRange,highRange+1,1)\n",
     "        return timeToSpendAtCurNode\n",
     "\n",
@@ -116,13 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "80a9c698-a605-4c2d-b2a1-7ac283cbed22",
    "metadata": {},
    "outputs": [],
    "source": [
     "#simulate arrival time of people coming in a lift and moving through from one to the next and calculate occupancy of each node over time\n",
-    "\n",
+    "simulationTime = 3600 #seconds\n",
     "#keep track of time when people arrive at a node, where they are and when they should leave.\n",
     "numberOfPeople = 0\n",
     "peopleList = []\n",
@@ -133,18 +246,18 @@
     "        nodeOccupancies[curTime] = {}\n",
     "        for key in nodePaths:\n",
     "            nodeOccupancies[curTime]['end'] = 0\n",
-    "            for paths in list(nodePaths[key])[:-1]:\n",
+    "            for paths in list(nodePaths[key]):\n",
     "                nodeOccupancies[curTime][paths] = 0\n",
     "    \n",
     "\n",
     "    for idx,paths in enumerate(nodePaths):\n",
-    "        offset = idx * 10\n",
+    "        offset = idx * 12\n",
     "        nodeDetails = nodePaths[paths]\n",
-    "        nodeList = list(nodeDetails)[:-1]\n",
+    "        nodeList = list(nodeDetails)\n",
     "\n",
-    "        if (curTime+offset)%liftRoundTime == 0:# People Arrive at node 1\n",
+    "        if (curTime+offset)%nodeRoundTime[paths] == 0:# People Arrive at node 1\n",
     "            timeBucket = round_down(curTime, 3600)\n",
-    "            liftOccupancy = int(liftCapacity * liftCapacityArrivalRate[timeBucket])\n",
+    "            liftOccupancy = int(pathLiftCapacity[paths] * liftCapacityArrivalRate[timeBucket])\n",
     "            for personIndex in range(liftOccupancy):\n",
     "                peopleList.append(person(len(peopleList),curTime,nodeList,nodeDetails))\n",
     "\n",
@@ -157,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "a8a0640c-a589-4afc-954f-ad7909e3257a",
    "metadata": {},
    "outputs": [],
@@ -165,7 +278,7 @@
     "# Get headers from one of the inner dictionaries\n",
     "fieldnames = ['time'] + list(next(iter(nodeOccupancies.values())).keys())\n",
     "\n",
-    "with open('250424_nodeStaticCalcsOutput_Multi.csv', 'w', newline='') as csvfile:\n",
+    "with open('250424_nodeStaticCalcsOutput_Multi_petal_type.csv', 'w', newline='') as csvfile:\n",
     "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
     "    writer.writeheader()\n",
     "    for time, node_values in nodeOccupancies.items():\n",
