changed to functions

--- a/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs optimisedTest.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs optimisedTest.ipynb
@@ -10,6 +10,8 @@
     "import copy\n",
     "import random as rd\n",
     "import csv\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
     "import math"
    ]
   },
@@ -219,143 +221,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "80a9c698-a605-4c2d-b2a1-7ac283cbed22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def runScenario(metro,scenario):\n",
-    "    startingTime = 0*3600 #7pm in seconds\n",
-    "    #simulate arrival time of people coming in a lift and moving through from one to the next and calculate occupancy of each node over time\n",
-    "    simulationTime = 86400+startingTime #seconds\n",
-    "    #Escalators\n",
+    "\n",
+    "\n",
+    "\n",
+    "def runScenario(metro, scenario):\n",
+    "    startingTime = 0 * 3600  # 7pm in seconds\n",
+    "    simulationTime = 86400 + startingTime  # seconds\n",
     "    peoplePerHour = 1500\n",
     "    flowRateBucket = 60\n",
-    "    flowRateWidthTest = 66 # people per minute per metre\n",
-    "    #keep track of time when people arrive at a node, where they are and when they should leave.\n",
+    "    flowRateWidthTest = 66  # people per minute per metre\n",
     "\n",
-    "    arrivalRatePerSecond = peoplePerHour / 3600\n",
-    "    numberOfDeparturesGenerated = {}\n",
-    "    numberOfArrivalsGenerated = {}\n",
-    "    numberOfPeople = {}\n",
+    "    nSeconds = simulationTime - startingTime\n",
+    "    nodes = list(roadLengthTable.keys()) + [\"end\"]\n",
+    "    nodeIndex = {node: i for i, node in enumerate(nodes)}\n",
+    "\n",
+    "    # Preallocate arrays\n",
+    "    occupancy = np.zeros((nSeconds, len(nodes)), dtype=np.int32)\n",
+    "    peopleCount = np.zeros_like(occupancy)\n",
+    "    flowRate = np.zeros_like(occupancy)\n",
+    "    widthFlow = np.zeros_like(occupancy, dtype=float)\n",
+    "\n",
+    "    # Track active people\n",
     "    peopleList = []\n",
     "    peopleEnd = 0\n",
-    "    nodeOccupancies = {}\n",
-    "    nodePeopleCount = {}\n",
-    "    nodeFlowRate = {}\n",
-    "    nodeWidthFlowRequired = {}\n",
-    "    for profile in routeTable:\n",
-    "        numberOfDeparturesGenerated[profile] = {}\n",
-    "        numberOfArrivalsGenerated[profile] = {}\n",
-    "        for routeId,routes in enumerate(routeTable[profile]):\n",
-    "            numberOfDeparturesGenerated[profile][routeId] = 0\n",
-    "            numberOfArrivalsGenerated[profile][routeId] = 0\n",
     "\n",
+    "    # Precompute arrival/departure rates per (profile, routeId, bucket)\n",
+    "    precomputedRates = {}\n",
+    "    for profile in departuresProfile:\n",
+    "        if profile not in routeTable:\n",
+    "            continue\n",
+    "        precomputedRates[profile] = {}\n",
+    "        for routeId, routes in enumerate(routeTable[profile]):\n",
+    "            precomputedRates[profile][routeId] = {}\n",
+    "            for bucket, depVal in departuresProfile[profile].items():\n",
+    "                arrVal = arrivalProfile[profile][bucket]\n",
+    "                pop = arrivalTime[profile][\"population\"]\n",
+    "                depNum = round(depVal * routes[\"popSplit\"] * pop)\n",
+    "                arrNum = round(arrVal * routes[\"popSplit\"] * pop)\n",
+    "                depRate = depNum / arrivalTime[profile][\"time\"]\n",
+    "                arrRate = arrNum / arrivalTime[profile][\"time\"]\n",
+    "                precomputedRates[profile][routeId][bucket] = (depRate, arrRate)\n",
     "\n",
-    "    for curTime in range(startingTime,simulationTime,1):\n",
+    "    # Main simulation loop (per second)\n",
+    "    for curTime in range(startingTime, simulationTime):\n",
+    "        t = curTime - startingTime\n",
     "        timeBucket = round_down(curTime, 3600)\n",
-    "        if curTime not in nodeOccupancies:\n",
-    "            nodeOccupancies[curTime] = {}\n",
-    "            nodePeopleCount[curTime] = {}\n",
-    "            nodeFlowRate[curTime] = {}\n",
-    "            nodeWidthFlowRequired[curTime] = {}\n",
-    "            nodeOccupancies[curTime]['end'] = 0\n",
-    "            nodePeopleCount[curTime]['end'] = 0\n",
-    "            nodeFlowRate[curTime]['end'] = 0\n",
-    "            nodeWidthFlowRequired[curTime]['end'] = 0\n",
-    "            for key in roadLengthTable:\n",
-    "                nodeOccupancies[curTime][key] = 0\n",
-    "                nodePeopleCount[curTime][key] = nodePeopleCount[curTime-1][key] if curTime > startingTime else 0\n",
-    "                nodeFlowRate[curTime][key] = nodePeopleCount[curTime-1][key] - nodePeopleCount[curTime-(flowRateBucket+1)][key] if curTime > startingTime+flowRateBucket+1 else 0\n",
-    "                nodeWidthFlowRequired[curTime][key] = nodeFlowRate[curTime-1][key]/flowRateWidthTest if curTime > startingTime else 0\n",
     "\n",
-    "        #loop through profiles and generate the number of people\n",
+    "        # Generate people\n",
     "        for profile in departuresProfile:\n",
     "            if profile not in routeTable:\n",
     "                continue\n",
     "            for routeId, routes in enumerate(routeTable[profile]):\n",
+    "                depRate, arrRate = precomputedRates[profile][routeId][timeBucket]\n",
     "\n",
-    "                numberOfDepartures = round(departuresProfile[profile][timeBucket]*routes['popSplit']*arrivalTime[profile]['population'])\n",
-    "                numberOfArrivals = round(arrivalProfile[profile][timeBucket]*routes['popSplit']*arrivalTime[profile]['population'])\n",
+    "                if curTime < timeBucket + arrivalTime[profile][\"time\"]:\n",
+    "                    # Departures\n",
+    "                    numberOfDeparturesGenerated = depRate\n",
+    "                    profileNodePaths = routes[\"route\"]\n",
+    "                    if profileNodePaths:\n",
+    "                        depAmount = math.floor(numberOfDeparturesGenerated)\n",
+    "                        if depAmount > 0:\n",
+    "                            peopleList.extend(\n",
+    "                                person(len(peopleList) + i, curTime, profileNodePaths, roadLengthTable, True)\n",
+    "                                for i in range(depAmount)\n",
+    "                            )\n",
     "\n",
-    "                if curTime < timeBucket+arrivalTime[profile]['time']:\n",
-    "                    rateOfDeparturesPeople = (numberOfDepartures/arrivalTime[profile]['time'])\n",
-    "                    numberOfDeparturesGenerated[profile][routeId] += rateOfDeparturesPeople\n",
+    "                    # Arrivals\n",
+    "                    numberOfArrivalsGenerated = arrRate\n",
+    "                    reversedProfileNode = routes[\"route\"][::-1]\n",
+    "                    arrAmount = math.floor(numberOfArrivalsGenerated)\n",
+    "                    if arrAmount > 0:\n",
+    "                        peopleList.extend(\n",
+    "                            person(len(peopleList) + i, curTime, reversedProfileNode, roadLengthTable, True)\n",
+    "                            for i in range(arrAmount)\n",
+    "                        )\n",
     "\n",
-    "                    rateOfArrivalsPeople = (numberOfArrivals/arrivalTime[profile]['time'])\n",
-    "                    numberOfArrivalsGenerated[profile][routeId] += rateOfArrivalsPeople\n",
-    "\n",
-    "                    profileNodePaths = routes['route']\n",
-    "                    reversedProfileNode = routes['route'][::-1]\n",
-    "                    if len(profileNodePaths) == 0:\n",
-    "                        continue\n",
-    "\n",
-    "                    \n",
-    "                    nodeDetails = roadLengthTable\n",
-    "                    personDeparturesAmount = math.floor(numberOfDeparturesGenerated[profile][routeId])\n",
-    "                    for personIndex in range(int(personDeparturesAmount)):\n",
-    "                        peopleList.append(person(len(peopleList),curTime,profileNodePaths,nodeDetails,True))\n",
-    "\n",
-    "                    personArrivalAmount = math.floor(numberOfArrivalsGenerated[profile][routeId])\n",
-    "                    for personIndex in range(int(personArrivalAmount)):\n",
-    "                        peopleList.append(person(len(peopleList),curTime,reversedProfileNode,nodeDetails,True))\n",
-    "\n",
-    "                numberOfDeparturesGenerated[profile][routeId]-=math.floor(numberOfDeparturesGenerated[profile][routeId])\n",
-    "                numberOfArrivalsGenerated[profile][routeId]-=math.floor(numberOfArrivalsGenerated[profile][routeId])\n",
-    "\n",
+    "        # Update agents\n",
     "        newPeopleList = []\n",
-    "        for agentId, agent in enumerate(peopleList):\n",
-    "            agentInNewSpace = agent.agentInNewSpace\n",
-    "            if agentInNewSpace:\n",
-    "                nodePeopleCount[curTime][agent.curNode] += 1\n",
+    "        for agent in peopleList:\n",
+    "            if agent.agentInNewSpace:\n",
+    "                peopleCount[t, nodeIndex[agent.curNode]] += 1\n",
     "\n",
     "            agent.updateAgentLocation(curTime)\n",
-    "            agentLocation = agent.curNode\n",
-    "\n",
-    "            if agentLocation == 'end':\n",
+    "            loc = agent.curNode\n",
+    "            if loc == \"end\":\n",
     "                peopleEnd += 1\n",
-    "                continue\n",
+    "            else:\n",
+    "                occupancy[t, nodeIndex[loc]] += 1\n",
+    "                newPeopleList.append(agent)\n",
     "\n",
-    "            nodeOccupancies[curTime][agentLocation] += 1\n",
-    "            newPeopleList.append(agent)\n",
-    "        nodeOccupancies[curTime]['end'] = peopleEnd\n",
+    "        occupancy[t, nodeIndex[\"end\"]] = peopleEnd\n",
     "        peopleList = newPeopleList\n",
     "\n",
-    "# print(nodeOccupancies)\n",
+    "    # Vectorized flow rate + width flow calc\n",
+    "    flowRate[flowRateBucket + 1 :] = peopleCount[1:-flowRateBucket] - peopleCount[:-flowRateBucket - 1]\n",
+    "    widthFlow[1:] = flowRate[:-1] / flowRateWidthTest\n",
     "\n",
-    "# Get headers from one of the inner dictionaries\n",
-    "    fieldnames = ['time'] + list(next(iter(nodeOccupancies.values())).keys())\n",
+    "    # Save outputs with Pandas\n",
+    "    time = np.arange(startingTime, simulationTime)\n",
     "\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_OccupancyOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
-    "        writer.writeheader()\n",
-    "        for time, node_values in nodeOccupancies.items():\n",
-    "            row = {'time': time}\n",
-    "            row.update(node_values)\n",
-    "            writer.writerow(row)\n",
+    "    def save_csv(arr, name):\n",
+    "        df = pd.DataFrame(arr, columns=nodes)\n",
+    "        df.insert(0, \"time\", time)\n",
+    "        df.to_csv(f\"UptownOutputs/{metro}/roadCalcs_{name}_{scenario}.csv\", index=False)\n",
     "\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_PeopleCountOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
-    "        writer.writeheader()\n",
-    "        for time, node_values in nodePeopleCount.items():\n",
-    "            row = {'time': time}\n",
-    "            row.update(node_values)\n",
-    "            writer.writerow(row)\n",
-    "\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_FlowRateOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
-    "        writer.writeheader()\n",
-    "        for time, node_values in nodeFlowRate.items():\n",
-    "            row = {'time': time}\n",
-    "            row.update(node_values)\n",
-    "            writer.writerow(row)\n",
-    "    with open(f'UptownOutputs/{metro}/roadCalcs_WidthFlowRequiredOutput_{scenario}.csv', 'w', newline='') as csvfile:\n",
-    "        writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
-    "        writer.writeheader()\n",
-    "        for time, node_values in nodeWidthFlowRequired.items():\n",
-    "            row = {'time': time}\n",
-    "            row.update(node_values)\n",
-    "            writer.writerow(row)"
+    "    save_csv(occupancy, \"OccupancyOutput\")\n",
+    "    save_csv(peopleCount, \"PeopleCountOutput\")\n",
+    "    save_csv(flowRate, \"FlowRateOutput\")\n",
+    "    save_csv(widthFlow, \"WidthFlowRequiredOutput\")\n"
    ]
   },
   {
@@ -404,7 +382,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -418,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
