--- a/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs.ipynb
@@ -153,12 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "9ce7018a-74a3-46cd-a25f-612162751d2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class person:\n",
+    "UptwUousssclass person:\n",
     "    def __init__(self,personIndex,timeAtNode,pathList,nodeDetail,inNewSpace):\n",
     "        self.idx = personIndex\n",
     "        self.curNode = pathList[0]\n",
