--- a/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic.ipynb
+++ b/NodeFlowStaticCalcs-MultiNodes-Types-RoadWidthCalcs_updatedArrivalLogic.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "c2f85640",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ba85d505",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "9ce7018a-74a3-46cd-a25f-612162751d2e",
    "metadata": {},
    "outputs": [],
@@ -220,19 +220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "5f05bcab",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{}\n",
-      "{}\n",
-      "{'1': {'population': 38182, 'time': 900.0}, '2': {'population': 3819, 'time': 900.0}, '3': {'population': 3164, 'time': 900.0}, '4': {'population': 317, 'time': 900.0}, '5': {'population': 3164, 'time': 900.0}, '6': {'population': 317, 'time': 900.0}, '7': {'population': 18728, 'time': 900.0}, '8': {'population': 1873, 'time': 900.0}, '9': {'population': 1826, 'time': 900.0}, '10': {'population': 183, 'time': 900.0}, '11': {'population': 1826, 'time': 900.0}, '12': {'population': 183, 'time': 900.0}, '13': {'population': 286, 'time': 900.0}, '14': {'population': 31, 'time': 900.0}, '15': {'population': 286, 'time': 900.0}, '16': {'population': 31, 'time': 900.0}, '17': {'population': 229, 'time': 900.0}, '18': {'population': 23, 'time': 900.0}, '19': {'population': 229, 'time': 900.0}, '20': {'population': 23, 'time': 900.0}, '21': {'population': 0, 'time': 900.0}, '22': {'population': 0, 'time': 900.0}, '23': {'population': 0, 'time': 900.0}, '24': {'population': 0, 'time': 900.0}, '25': {'population': 0, 'time': 900.0}, '26': {'population': 0, 'time': 900.0}, '27': {'population': 1712, 'time': 900.0}, '28': {'population': 172, 'time': 900.0}, '29': {'population': 1712, 'time': 900.0}, '30': {'population': 172, 'time': 900.0}, '31': {'population': 1142, 'time': 900.0}, '32': {'population': 114, 'time': 900.0}, '33': {'population': 0, 'time': 900.0}, '34': {'population': 0, 'time': 900.0}, '35': {'population': 10000, 'time': 900.0}, '36': {'population': 1000, 'time': 900.0}}\n",
-      "{}\n",
-      "{}\n"
+     "ename": "NameError",
+     "evalue": "name 'routeTable' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(routeTable) \u001b[38;5;66;03m#node paths\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(roadLengthTable)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(arrivalTime)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'routeTable' is not defined"
      ]
     }
    ],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "80a9c698-a605-4c2d-b2a1-7ac283cbed22",
    "metadata": {},
    "outputs": [],
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a8a0640c-a589-4afc-954f-ad7909e3257a",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "18e5dea6",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "4b86983f",
    "metadata": {},
    "outputs": [],
